--- a/hub/collections/index.html
+++ b/hub/collections/index.html
@@ -15,7 +15,7 @@
         "@context": "http://schema.org",
         "@type": "ItemList",
         "name": "Collections",
-        "description": "No description",
+        "description": "",
         "itemListElement": [
           {
           "@type": "Article",
