--- a/hub/index.html
+++ b/hub/index.html
@@ -69,9 +69,11 @@
         "name": "Mission",
         "articleBody": [
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Machine-readable web is the first prerequisite for the computers to learn how to process the natural language. With the development of the project it will implement subsequent measures to solve the Chinese room problem. They will be related to the development of Semantic Field (see White Paper) and machine learning algorithms that will be discussed individually after the announcement of Individual Assistant project.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "The mission is based on a solid interrelation of facts about modern web, its challenges and solutions with the aid of advanced technologies.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏"
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏"
         ]
         },
         {
@@ -181,7 +183,10 @@
         "name": "How it works?",
         "articleBody": [
         "WRIO Internet OS is a PaaS and its cloud applications are SaaS, (operating on remote servers). Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications in their turn act as conventional desktop programs, and it intends to replace desktop OS’s in the near future.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "The user-centric approach will revolutionize the browsing experience. As of yet, the users are only able to choose a browser and define a set of plugins to be used with it. But now, with WRIO the user control gets one step higher: hubs authors determine the content, yet the display style and the set of functions is defined by the user. Web 2.0 sites are replaced with user-centric hubs of Web 3.0.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Default WRIO Internet OS editor creates web-pages based on schemas in semantic format JSON-LD (Linked Data): an HTML file is a set of static data (key-value). The page format has been developed by Google, Microsoft, Yahoo and Yandex. Page indexation requires no search engine optimization or syntax analysis, which ensures high organic search positions. The format of pages is machine-readable, which enables automatic data processing. This paves the way to the development of automatic curated web: metadata of each created page is recorded in the blockchain, then it is correlated to the user’s interest matrix stored in the profile. If there is a match, the page is displayed in the user’s web dashboard (webtop), which is a key element of user-centric web."
         ]
         },
@@ -225,8 +230,110 @@
         {
         "@type": "Article",
         "name": "",
-        "about": "text.",
-        "url": "url?'text':3,20,external"
+        "about": "Machine-readable data is data (or metadata) in a format that can be easily processed by a computer.",
+        "url": "https://en.wikipedia.org/wiki/Machine-readable_data?'machine-readable':5,565,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "We are cypherpunks and popularizers of blanket distribution of cryptography that runs through all our projects. A cypherpunk is any activist advocating widespread use of strong cryptography and privacy-enhancing technologies as a route to social and political change.",
+        "url": "https://webrunes.com/team/?'webRunes':15,201"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "An Internet operating system, or Internet OS, is any type of operating system designed to run all of its applications and services through an Internet client, generally a web browser.",
+        "url": "https://en.wikipedia.org/wiki/Internet_OS?'Internet Operating System':15,223,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "A virtual assistant is a software agent that can perform tasks or services for an individual.",
+        "url": "https://en.wikipedia.org/wiki/Virtual_assistant_(artificial_intelligence)?'virtual assistants':19,146,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "The Chinese room argument holds that a program cannot give a computer a 'mind', 'understanding' or 'consciousness', regardless of how intelligently or human-like the program may make the computer behave.",
+        "url": "https://en.wikipedia.org/wiki/Chinese_room?'Chinese room':24,198,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Full description of the project including sections related to The Alternative libertarian project. If you still have any questions, please write us to info@webrunes.com, or join the official Slack or Telegram channel.",
+        "url": "https://goo.gl/rVcPCV?'White Paper':24,283,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "No description.",
+        "url": "#?'Individual Assistant':24,390"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Structured data is a standardized format for providing information about a page and classifying the page content.",
+        "url": "https://developers.google.com/search/docs/guides/intro-structured-data?'Structured data':30,20,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "In computing, linked data (often capitalized as Linked Data) is a method of publishing structured data so that it can be interlinked and become more useful through semantic queries.",
+        "url": "https://en.wikipedia.org/wiki/Linked_data?'Linked Data':82,2,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Core WYSIWYG editor.",
+        "url": "https://core.wrioos.com/create?'WYSIWYG editor':97,87"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Brief description of the project in one image. Contains the list of drawbacks of todays’ web and ways of their correction, which will be implemented in WRIO Internet OS. Also it provides the operational scheme of the project and roadmap of further developments.",
+        "url": "https://webrunes.com/img/advanced_guide.jpg?'Advanced Guide':100,10,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Credits are the tokens of WRIO OS platform.",
+        "url": "https://wrioos.com/index.html#Credits?'Credits':111,38"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Advanced tweets.",
+        "url": "#?'Pinger'112,70"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "No description.",
+        "url": "https://github.com/webRunes/WRIO-InternetOS?'open-source':120,19,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Core WYSIWYG editor.",
+        "url": "https://core.wrioos.com/create?'creates'127,32"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Schema.org is a collaborative, community activity with a mission to create, maintain, and promote schemas for structured data on the Internet, on web pages, in email messages, and beyond.",
+        "url": "https://schema.org/docs/schemas.html?'schemas'127,59,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "JSON-LD, or JavaScript Object Notation for Linked Data, is a method of encoding Linked Data using JSON.",
+        "url": "https://en.wikipedia.org/wiki/JSON-LD?'JSON-LD'127,86,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "A web desktop or webtop is a desktop environment embedded in a web browser or similar client application.",
+        "url": "https://en.wikipedia.org/wiki/Web_desktop?'webtop'127,708,external"
         }
         ],
         "image": [
@@ -236,13 +343,13 @@
         "contentUrl": "https://wrioos.com/img/mission.jpg?23,0",
         "name": "Serve as the human-machine interpreter",
         "description": [
-        "Machine-readable web is the first prerequisite for the computers to learn how to process the natural language. With the development of the project it will implement subsequent measures to solve the Chinese room problem. They will be related to the development of Semantic Field (see White Paper) and machine learning algorithms that will be discussed individually after the announcement of Individual Assistant project."
+        ""
         ]
         },
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/img/mission-schema.jpg?26,0",
+        "contentUrl": "https://wrioos.com/img/mission-schema.jpg?27,0",
         "name": "Mission",
         "description": [
         "[01. Fact] The Age of Internet of Things. The rapid increase in the number of Internet users and smart devices",
@@ -254,8 +361,23 @@
         "[07. What] User-centric services and predictive search engines. Functions and interactivity are provided through cloud and distributed applications while all user actions and browsing are performed through a personal WRIO Internet OS web dashboard",
         "[08. Tool] WRIO Internet OS. WRIO Internet OS based on these principles will enable new markets of cloud/distributed apps and affordable terminal devices with a browser-driven OS",
         "[09. Future] Thin-client terminal devices (Individual Assistant). The era of smart predictive systems that will give rise to a new generation of web",
-        "[10. Objective] Evolution to secure machine-readable distributed Web 3.0. The accomplishment of the mission will serve as the technical foundation for the implementation of ideas of libertarian project The Alternative",
+        "[10. Objective] Evolution to secure machine-readable distributed Web 3.0. The accomplishment of the mission will serve as the technical foundation for the implementation of ideas of libertarian project The Alternative (TBA)",
         "[11. Mission] Serve as the human-machine interpreter. Thus, to accomplish the mission we need a platform capable of upgrading nowadays’ Web 2.0 to machine-readable Web 3.0"
+        ]
+        },
+        {
+        "@type": "ImageObject",
+        "author": "webRunes",
+        "contentUrl": "https://wrioos.com/img/architecture.jpg?124,0",
+        "name": "WRIO Internet OS architecture",
+        "description": [
+        "Layers:",
+        "00. Global Data Pool. Linked Data storage: pages can be stored at any static content hosting",
+        "01. WRIO Internet OS. A decentralized network of WRIO OS nodes that render Linked Data and turn them into hubs: a node is required only for those users who do not use the WRIO OS browser / plugin / mobile app",
+        "02. Themes. Used to display hubs and user interface of cloud and distributed applications in the style selected by the user",
+        "03. Cloud and distributed applications. A set of applications determining functions of hubs: sharing in selected social media, comments, and etc., including web dashboards applications and applications using the blockchain",
+        "04. Smart Contracts. Self-executing algorithms interacting with the blockchain",
+        "05. Blockchain. A metadata base and assets repository"
         ]
         }
         ],
@@ -273,7 +395,7 @@
         {
         "@type": "ItemList",
         "name": "Collections",
-        "description": "",
+        "description": "No description",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/collections/"
         }
