webRunes link fix

--- a/hub/index.html
+++ b/hub/index.html
@@ -237,7 +237,7 @@
         "@type": "Article",
         "name": "",
         "about": "We are cypherpunks and popularizers of blanket distribution of cryptography that runs through all our projects. A cypherpunk is any activist advocating widespread use of strong cryptography and privacy-enhancing technologies as a route to social and political change.",
-        "url": "https://webrunes.com/team/?'webRunes':15,201"
+        "url": "https://webrunes.com/?'webRunes':15,201"
         },
         {
         "@type": "Article",
