Cover/offer upd

--- a/hub/offer/index.html
+++ b/hub/offer/index.html
@@ -23,6 +23,7 @@
         "about": "Promote and get a reward",
         "text": [
         "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn webGold for every like, share, repost or comment.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "* x10 WRG per share, retweet, like and comment. MAX 2,500 WRG",
         "* Total webGold reserved for bounty: 1,000,000 WRG"
         ],
@@ -46,11 +47,13 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Reasons to participate:",
         "* sale of webGold and profit-making with the increase in the rate: unlike other Crowdsales, all raised funds will be used to support webGold exchange rate. This ways webGold can always be sold for the book value. The book value is determined by the ratio of the total number of webGold tokens to the amount raised during the Crowdsale",
-        "* free Airdrop. Crowdsale participants have a unique opportunity to take part in a free distribution of newly issued WRG on a pro rata basis (Proof-of-Stake). Read more in the White Paper",
+        "* free Airdrop. Crowdsale participants have a unique opportunity to take part in a free distribution of newly issued WRG on a pro rata basis (Proof-of-Stake)",
         "* unlike the overwhelming majority of other Crowdsales/ICOs we already have a minimum viable product",
         "* the project is free, yet webGold will be required to purchase additional services: boost posts, offers, premium account, donations and so on.",
         "* participation in special offers from WRIO OS to acquire premium services and purchase Credits at a lowest price",
-        "* soon after Crowdsale its participants will be able to purchase tokens of first DAOs on special terms, including WRIO Internet OS"
+        "* soon after Crowdsale its participants will be able to purchase tokens of first DAOs on special terms, including WRIO Internet OS",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Read more in the White Paper"
         ],
         "mentions": [
         {
@@ -63,13 +66,7 @@
         "@type": "Article",
         "name": "White Paper",
         "about": "Full description of the project including sections related to The Alternative libertarian project. If you still have any questions, please write us to info@webrunes.com, or join the official Slack or Telegram channel.",
-        "url": "https://goo.gl/rVcPCV?'White Paper':7,17,external"
-        },
-        {
-        "@type": "Article",
-        "name": "Credits",
-        "about": "Credits (CRD) are the tokens of WRIO OS platform.",
-        "url": "https://wrioos.com/index.html#Credits?'Credits':10,88"
+        "url": "https://goo.gl/rVcPCV?'White Paper':12,17,external"
         }
         ]
         }
