--- a/hub/cover/index.html
+++ b/hub/cover/index.html
@@ -97,7 +97,7 @@
         "* replacement of obsolete web 2.0 sites with web 3.0 hubs without a string of code: there is no need in the development, setup and technical support. Rich functionality through cloud/distributed apps",
         "* semantics. Semantic structure of pages that needs no search engine optimization and ensures top of search results",
         "* statistics and analytics. Anonymous though all-encompassing statistics and analytics based on the Interest Matrix for efficient business operations",
-        "* offers. Provide a substitute of expensive, untargeted, and inefficient adds",
+        "* offers. Provide a substitute of expensive, untargeted, and inefficient ads",
         "* secure transactions without intermediaries with the help of reputational system Web of Trust",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Read more in the White Paper"
@@ -118,11 +118,11 @@
         "contentUrl": "https://wrioos.com/img/cover_developer.jpg",
         "about": "Blockchain-powered semantic web platform",
         "text": [
-        "* browser-driven. WRIO OS guarantees the absence of cross-platform, cross-browser, cross-device, and responsive problems. Frontend development is not required as a ready made set of controls and elements is provided",
-        "* future. Participation in the rise of a new market of cloud and distributed apps for thin-client terminal devices with a browser-driven OS onboard",
         "* hubs. A new type of web 3.0 sites enjoying data cohesion: cross-domain use of data without copy/paste or API",
         "* global. Blockchain as a metadata base and asset repository. A generally accessible decentralized users’ database of profiles based on the Ethereum blockchain",
         "* predictive. Utilizing metadata along with the Interest Matrix enables creation of predictive search engines and services",
+        "* future. Participation in the rise of a new market of cloud and distributed apps for thin-client terminal devices with a browser-driven OS onboard",
+        "* browser-driven. WRIO OS guarantees the absence of cross-platform, cross-browser, cross-device, and responsive problems. Frontend development is not required as a ready made set of controls and elements is provided",
         "* open. Project is open-source",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Read more in the White Paper"
