--- a/hub/index.html
+++ b/hub/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WRIO Internet OS hub">
+    <meta name="description" content="The platform for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation.">
     <meta name="author" content="webRunes">
-    <meta name="keywords" content="WRIO Internet OS, semantic, web 3.0, secure, decentralization">
+    <meta name="keywords" content="WRIO Internet OS, platform, semantic, machine-readable, web 3.0, secure, decentralization">
     <title>WRIO Internet OS</title>
 
     <script type="application/ld+json">
