Cover intro link upd

--- a/hub/cover/index.html
+++ b/hub/cover/index.html
@@ -17,19 +17,21 @@
         "itemListElement": [
         {
         "@type": "ImageObject",
-        "name": "WRIO Internet OS. Play Intro",
+        "name": "WRIO Internet OS",
         "thumbnail": "https://wrioos.com/img/cover1-200x200.jpg",
         "contentUrl": "https://wrioos.com/img/cover1.jpg",
         "about": "A user-centric & machine-readable Web 3.0 platform",
         "text": [
-        "The platform for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation."
+        "The platform for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Play Intro"
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
         "about": "WRIO Internet OS is a platfrom for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation.",
-        "url": "https://youtu.be/q7WevBb8JeQ?'Play Intro':1,18,external"
+        "url": "https://youtu.be/q7WevBb8JeQ?'Play Intro':5,0,external"
         }
         ]
         },
