--- a/hub/index.html
+++ b/hub/index.html
@@ -194,7 +194,7 @@
         "@type": "Article",
         "name": "Business model",
         "articleBody": [
-        "WRIO Internet OS gets a percent of transactions within the platform and distribution of premium accounts, services and offers."
+        "WRIO Internet OS gets a percent of transactions within the platform and distribution of premium accounts, services and ads (offers)."
         ]
         },
         {
@@ -314,6 +314,18 @@
         {
         "@type": "Article",
         "name": "",
+        "about": "Platform as a Service (PaaS) is a category of cloud computing services that provides a platform allowing customers to develop, run, and manage applications without the complexity of building and maintaining the infrastructure typically associated with developing and launching an app.",
+        "url": "https://en.wikipedia.org/wiki/Platform_as_a_service?'PaaS':122,22,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Software as a service (SaaS) is a software licensing and delivery model in which software is licensed on a subscription basis and is centrally hosted.",
+        "url": "https://en.wikipedia.org/wiki/Software_as_a_service?'SaaS':122,58,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
         "about": "Core WYSIWYG editor.",
         "url": "https://core.wrioos.com/create?'creates'127,32"
         },
@@ -381,7 +393,7 @@
         ]
         }
         ],
-        "author": "",
+        "author": "713372365175",
         "comment": "887324909919186944"
         }
     </script>
