Basic Guide upd

--- a/hub/index.html
+++ b/hub/index.html
@@ -96,6 +96,7 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Automatic processing and distribution of content with due account of the author’s reputation and user’s interest matrix. Peer review and content evaluation through a decentralized rating system based on the blockchain.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "A list of issues typical of today’s Web 2.0 and their solutions in Web 3.0 that will be implemented with the development of the project:",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Issue: A separate profile needs to be registered and managed for each website or service.",
@@ -375,6 +376,28 @@
         "[09. Future] Thin-client terminal devices (Individual Assistant). The era of smart predictive systems that will give rise to a new generation of web",
         "[10. Objective] Evolution to secure machine-readable distributed Web 3.0. The accomplishment of the mission will serve as the technical foundation for the implementation of ideas of libertarian project The Alternative (TBA)",
         "[11. Mission] Serve as the human-machine interpreter. Thus, to accomplish the mission we need a platform capable of upgrading nowadays’ Web 2.0 to machine-readable Web 3.0"
+        ]
+        },
+        {
+        "@type": "ImageObject",
+        "author": "webRunes",
+        "contentUrl": "https://wrioos.com/img/basic_guide.jpg?46,0",
+        "name": "Basic Guide",
+        "description": [
+        "Web 2.0:",
+        "[Browsing] A major part of websites require JavaScript to be operational. It can contain malicious code and infect users’ computers through browsers",
+        "[Application Programming Interface] Information is isolated. An API is needed to transfer information beyond a website",
+        "[Search engine optimization] Search engine optimization is the process of affecting the online visibility of a website or a web page in a web search engine's unpaid results",
+        "[Robot unfriendly] Search engines are unable to index data without a syntax analysis. A set of algorithms is used to “understand” information contained on pages to convert it into a machine-readable format",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Web 3.0:",
+        "[Browsing] Each page contains a link to wrioos.js that interlinks it to a default WRIO OS node",
+        "[HTTP request] Pages can be assembled together like lego bricks without API",
+        "[Robot friendly (machine-readable)]. Linked Data, powered by Schema.org. JSON-LD is a semantic format supported by all major search engines. The semantic structure of pages ensures high organic search positions without Search engine optimization. Machine-readable format enables automatic data processing",
+        "[WRIO Internet OS] WRIO OS mobile app, browser & plugin use an isolated container and process pages in a read-only mode, ignoring all scripts, thus ensuring the user's security",
+        "[User Interface] Themes",
+        "[Сloud & Distributed Applications] Rich functionality for hubs. Applications use the blockchain to store and read page metadata, and operate with assets through Smart Contracts",
+        "[Ethereum Blockchain] MetaDataBase, user profiles and assets"
         ]
         },
         {
