Rename to beginners_guide

--- a/hub/index.html
+++ b/hub/index.html
@@ -381,8 +381,8 @@
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/img/basic_guide.jpg?46,0",
-        "name": "Basic Guide",
+        "contentUrl": "https://wrioos.com/img/beginners_guide.jpg?46,0",
+        "name": "The Beginner's Guide",
         "description": [
         "Web 2.0:",
         "[Browsing] A major part of websites require JavaScript to be operational. It can contain malicious code and infect users’ computers through browsers",
