--- a/hub/index.html
+++ b/hub/index.html
@@ -280,73 +280,73 @@
         "@type": "Article",
         "name": "",
         "about": "In computing, linked data (often capitalized as Linked Data) is a method of publishing structured data so that it can be interlinked and become more useful through semantic queries.",
-        "url": "https://en.wikipedia.org/wiki/Linked_data?'Linked Data':82,2,external"
+        "url": "https://en.wikipedia.org/wiki/Linked_data?'Linked Data':83,2,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Core WYSIWYG editor.",
-        "url": "https://core.wrioos.com/create?'WYSIWYG editor':97,87"
+        "url": "https://core.wrioos.com/create?'WYSIWYG editor':98,87"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Brief description of the project in one image. Contains the list of drawbacks of todays’ web and ways of their correction, which will be implemented in WRIO Internet OS. Also it provides the operational scheme of the project and roadmap of further developments.",
-        "url": "https://webrunes.com/img/advanced_guide.jpg?'Advanced Guide':100,10,external"
+        "url": "https://webrunes.com/img/advanced_guide.jpg?'Advanced Guide':101,10,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Credits are the tokens of WRIO OS platform.",
-        "url": "https://wrioos.com/index.html#Credits?'Credits':111,38"
+        "url": "https://wrioos.com/index.html#Credits?'Credits':112,38"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Advanced tweets.",
-        "url": "#?'Pinger'112,70"
+        "url": "#?'Pinger'113,70"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "No description.",
-        "url": "https://github.com/webRunes/WRIO-InternetOS?'open-source':120,19,external"
+        "url": "https://github.com/webRunes/WRIO-InternetOS?'open-source':121,19,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Platform as a Service (PaaS) is a category of cloud computing services that provides a platform allowing customers to develop, run, and manage applications without the complexity of building and maintaining the infrastructure typically associated with developing and launching an app.",
-        "url": "https://en.wikipedia.org/wiki/Platform_as_a_service?'PaaS':122,22,external"
+        "url": "https://en.wikipedia.org/wiki/Platform_as_a_service?'PaaS':123,22,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Software as a service (SaaS) is a software licensing and delivery model in which software is licensed on a subscription basis and is centrally hosted.",
-        "url": "https://en.wikipedia.org/wiki/Software_as_a_service?'SaaS':122,58,external"
+        "url": "https://en.wikipedia.org/wiki/Software_as_a_service?'SaaS':123,58,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Core WYSIWYG editor.",
-        "url": "https://core.wrioos.com/create?'creates'127,32"
+        "url": "https://core.wrioos.com/create?'creates'128,32"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Schema.org is a collaborative, community activity with a mission to create, maintain, and promote schemas for structured data on the Internet, on web pages, in email messages, and beyond.",
-        "url": "https://schema.org/docs/schemas.html?'schemas'127,59,external"
+        "url": "https://schema.org/docs/schemas.html?'schemas'128,59,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "JSON-LD, or JavaScript Object Notation for Linked Data, is a method of encoding Linked Data using JSON.",
-        "url": "https://en.wikipedia.org/wiki/JSON-LD?'JSON-LD'127,86,external"
+        "url": "https://en.wikipedia.org/wiki/JSON-LD?'JSON-LD'128,86,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "A web desktop or webtop is a desktop environment embedded in a web browser or similar client application.",
-        "url": "https://en.wikipedia.org/wiki/Web_desktop?'webtop'127,708,external"
+        "url": "https://en.wikipedia.org/wiki/Web_desktop?'webtop'128,708,external"
         }
         ],
         "image": [
@@ -403,7 +403,7 @@
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/img/architecture.jpg?124,0",
+        "contentUrl": "https://wrioos.com/img/architecture.jpg?125,0",
         "name": "WRIO Internet OS architecture",
         "description": [
         "Layers:",
@@ -416,7 +416,7 @@
         ]
         }
         ],
-        "author": "713372365175",
+        "author": "https://webrunes.com/?wr.io=713372365175",
         "comment": "887324909919186944"
         }
     </script>
