--- a/hub/index.html
+++ b/hub/index.html
@@ -202,11 +202,11 @@
         "@type": "Article",
         "name": "Credits",
         "articleBody": [
-        "Credits (CRD) are the tokens of WRIO OS platform. The cryptocurrency mining is based on the concept of PoSA (proof of social action) — a user can receive 10 CRD every hour free of charge by clicking “Get free Credits” in the Comments section on any page with enabled comments (including this one). They can be used to receive and make credits. Thus CRD are some sort of non-flat likes, the amount of which reflects the measure of your approval and gratitude for the content created by an author. Though the initial cost of CRD is not high (see below), in case of a good many of CRD creditors the amounts become sufficiently large to support authors. Soon CRD will be used to get additional services that will enhance users’ opportunities: premium account, post boost, placement of ads, and etc.",
+        "Credits (CRD) are the tokens of WRIO OS platform. The cryptocurrency mining is based on the concept of PoSA (proof of social action) — a user can receive 10 CRD every hour free of charge by clicking “Get free Credits” in the Comments section on any page with enabled comments (including this one). They can be used to receive and make donations (crediting). Thus CRD are some sort of non-flat likes, the amount of which reflects the measure of your approval and gratitude for the content created by an author. Though the initial cost of CRD is not high (see below), in case of a good many of CRD creditors the amounts become sufficiently large to support authors. Soon CRD will be used to get additional services that will enhance users’ opportunities: premium account, post boost, placement of ads, and etc.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "If someone regrets that they haven’t become an early adopter of Bitcoin, they have a chance to become one for WRIO Internet OS, and receive and accrue Credits. Even with Bitcoin it wasn’t that easy! But unlike Bitcoin, Ethereum, or any other cryptocurrency, whose mining is based on computer performance, since the emission of CRD does not require power consumption, it isn’t just a “green” cryptocurrency. A user can receive 10* CRD every hour, which is a modest amount for developed countries, but for over a billion of people living for $2 per day the system provides a unique opportunity to get a significant addition to that sum as social miners. As the number of people participating in CRD mining and accrual grows, the system will have a greater impact on the distribution of wealth in the world, since those interested in services provided by WRIO Internet OS will purchase Credits accrued by social miners to pay for them.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "A WRIO Internet OS Stock Exchange is scheduled to be launched in 2018. Stock Exchange will offer WRG / CRD pair. A preliminary exchange rate is set as 1:1, i.e 1,000 CRD = 1g of gold, which at the time of writing this text is an equivalent of $40. The balance between the supply and demand will be correlating the cost of CRD, making the least well-to-do social groups the most active social miners.",
+        "A WRIO Internet OS Stock Exchange is scheduled to be launched in 2018. Stock Exchange will offer WGD / CRD pair. A preliminary exchange rate is set as 1:1, i.e 1,000 CRD = 1g of gold, which at the time of writing this text is an equivalent of $40. The balance between the supply and demand will be correlating the cost of CRD, making the least well-to-do social groups the most active social miners.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "* At a later stage the amount of received CRD will be directly related to the account rating, which will eliminate the stimulus to register fake accounts.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏"
@@ -215,14 +215,14 @@
         {
         "@type": "Article",
         "name": "Bounty Campaign Registration",
-        "about": "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn WRG for every like, share, repost or comment.",
+        "about": "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn WGD for every like, share, repost or comment.",
         "image": "https://webrunes.com/img/bounty_campaign-200x200.jpg",
         "url": "https://docs.google.com/forms/d/e/1FAIpQLSfl3sI9uVxbMHkAjv_E_5_KnN9a76u28QRO-lo1qwSRHUfAeQ/viewform"
         },
         {
         "@type": "Article",
         "name": "Crowdsale Registration",
-        "about": "Be one of the first 100 registered users will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +50% bonus and + extra bonuses. Crowdsale participants have a unique opportunity to take part in a FREE distribution of newly issued WRG.",
+        "about": "Be one of the first 100 registered users will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WGD with a +50% bonus and + extra bonuses. Crowdsale participants have a unique opportunity to take part in a FREE distribution of newly issued WRG.",
         "image": "https://webrunes.com/img/crowdsale-200x200.jpg",
         "url": "https://docs.google.com/forms/d/e/1FAIpQLSfe5bYJYayC_ZwmWgHjea-gij5-2MohY5TaOwHT4QhVU_iVnQ/viewform"
         }
