Layers: text upd

--- a/hub/index.html
+++ b/hub/index.html
@@ -407,7 +407,7 @@
         "name": "WRIO Internet OS architecture",
         "description": [
         "Layers:",
-        "00. Global Data Pool. Linked Data storage: pages can be stored at any static content hosting",
+        "00. Global Data Pool. Linked Data storage: HTML pages, contain a link to wrioos.js that interlinks it to a default WRIO OS node. Can be stored at any static content hosting",
         "01. WRIO Internet OS. A decentralized network of WRIO OS nodes that render Linked Data and turn them into hubs: a node is required only for those users who do not use the WRIO OS browser / plugin / mobile app",
         "02. Themes. Used to display hubs and user interface of cloud and distributed applications in the style selected by the user",
         "03. Cloud and distributed applications. A set of applications determining functions of hubs: sharing in selected social media, comments, and etc., including web dashboards applications and applications using the blockchain",
