--- a/hub/collections/investments_and_tokens/index.html
+++ b/hub/collections/investments_and_tokens/index.html
@@ -61,8 +61,8 @@
         "name": "Seed",
         "articleBody": [
         "New Tokens: 8,000,000 · Total Tokens: 15,000,000 ",
-        "Price: 0.15 ☉ · Factor: ↑ x15",
-        "Funds Raised: 1,200,000 ☉ · Total Funds Raised: 1,245,000 ☉",
+        "Price: 0.2 ☉ · Factor: ↑ x20",
+        "Funds Raised: 1,600,000 ☉ · Total Funds Raised: 1,645,000 ☉",
         "Start Date: May 27, 2016 · End Date: May 27, 2016",
         "Status: Sold"
         ]
@@ -72,8 +72,8 @@
         "name": "Series A",
         "articleBody": [
         "New Tokens: 16,000,000 · Total Tokens: 31,000,000 ",
-        "Price: 3.75 ☉ · Factor: ↑ x25",
-        "Start: Autumn 2017",
+        "Price: 20 ☉ · Factor: ↑ x100",
+        "Start: Spring 2018",
         "Status: Not Started"
         ]
         },
